# Le-Grand-Livre-des-Recettes

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  README_SPARK.md  SPARK.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_pipeline.py
.dlt/: config.toml  secrets.toml
dashboard/: ingestion.py  recipes_database.duckdb
dashboard/app/: callbacks.py  charts.py  data.py  layout.py
data/raw/: README.md
docs/: Recipe_Dashboards_Documentation.md  Recipe_Pipeline_Documentation.md  Recipe_Poc_Documentation.md  doc_general.md  rapport_bigdata.docx
notebooks/: recipe_optimized.ipynb  recipe_pipeline_final.ipynb  recipe_poc.ipynb
notebooks/databricks_notebooks/: recipe_exploration.html
scripts/: main.py  recipe_data_exploration.ipynb  recipe_optimized.ipynb  recipe_pipeline_final.ipynb  recipe_poc.ipynb  salary_analysis.py  salary_analysis2.py  test.py
scripts/databricks_notebooks/: recipe_pipeline_final.html
sql/: 01_assemble.sql  02_final_tables.sql
src/le_grand_livre_des_recettes/dashboard/: Sans-titre-2026-04-03-0843.excalidraw  db_schema.txt  ingestion.py  main.py
src/le_grand_livre_des_recettes/dashboard/app/: callbacks.py  charts.py  config.py  data.py
src/le_grand_livre_des_recettes/dashboard/assets/: style.css
src/le_grand_livre_des_recettes/pipeline/: config.py  ingest.py  spark_session.py
src/le_grand_livre_des_recettes/pipeline/models/: recipes.py  schemas.py
src/le_grand_livre_des_recettes/pipeline/sources/: _utils.py  kaggle_recipes.py  mit_recipes.py
src/le_grand_livre_des_recettes/pipeline/transformers/: assemble.py  enrich.py
tests/: conftest.py  test_integration.py  test_pipeline.py  test_sources.py  test_transformers.py
tests/fixtures/: RAW_recipes.csv  det_ingrs.json  layer1.json  layer2+.json  recipes_with_nutritional_info.json
