[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipes-pipeline"
version = "0.2.0"
description = "PySpark pipeline for MIT + Kaggle recipes datasets"
requires-python = ">=3.11"

dependencies = [
    # Core pipeline
    "pyspark>=3.5.0",
    # Validation (modèles Pydantic conservés pour documentation)
    "pydantic>=2.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
recipes-pipeline = "run_pipeline:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
