[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipes-pipeline"
version = "1.0.0"
description = "PySpark pipeline — MIT Recipe1M+ + Kaggle Food.com → Delta Lake"
requires-python = ">=3.11"

dependencies = [
    "dlt[filesystem,deltalake]>=1.9.0",
    "pyspark>=3.5.0",
    "delta-spark>=3.2.0,<4.0.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
recipes-pipeline = "run_pipeline:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["le_grand_livre_des_recettes*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
